# AdForge-AI

./: README.md  pyproject.toml  requirements.txt  structure.py
notebooks/: ad_generation.ipynb
src/adforgeai/: __init__.py
